objects/CSS_WS_Warranty__c.object
<CustomObject>
    <description>Mexico Warranty Claims Object</description>
    <fields>
        <fullName>CSS_Authorization_Number__c</fullName>
        <description>Authorization Number</description>
        <label>Authorization Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Access_Code__c</fullName>
        <label>Access Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Account_Code_Type__c</fullName>
        <label>Account Code Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Account_Code__c</fullName>
        <label>Account Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Approval_Code__c</fullName>
        <label>Approval Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Authorized_Amount__c</fullName>
        <label>Authorized amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Automotive_Application_Flag__c</fullName>
        <label>Automotive_Application_Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_BU__c</fullName>
        <label>BU</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Belongs_To__c</fullName>
        <label>Belongs to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DR</fullName>
                    <default>true</default>
                    <label>DR</label>
                </value>
                <value>
                    <fullName>Paccar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Beyond_Factory_Charges__c</fullName>
        <label>Beyond Factory Charges</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Build_Date__c</fullName>
        <label>Build Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CGLF__c</fullName>
        <formula>CSS_WS_SO_Document_Type__c + &apos; &apos; + CSS_WS_SO_Transaction_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CGLF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CM_Bill_to_Customer_Name__c</fullName>
        <label>Bill to Customer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CM_Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CM_Document_Type__c</fullName>
        <label>Document Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CM_Extended_Amount_Calculated__c</fullName>
        <label>Extended Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CM_Extended_Amount__c</fullName>
        <label>Extended Amount 2 ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CM_Ship_to_Customer_Name__c</fullName>
        <label>Ship to Customer Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CM_Timbre_Fiscal__c</fullName>
        <label>Timbre Fiscal</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CM_Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CM_Transaction_Number__c</fullName>
        <label>Transaction Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_COMC__c</fullName>
        <description>CGLC Number</description>
        <formula>CSS_WS_CM_Document_Type__c + &apos; &apos; +  IF(CONTAINS(CSS_WS_CM_Transaction_Number__c, &quot;.&quot;), LEFT(CSS_WS_CM_Transaction_Number__c,Find(&quot;.&quot;, CSS_WS_CM_Transaction_Number__c)-1), CSS_WS_CM_Transaction_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CGLC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CSM_Date_Days__c</fullName>
        <formula>if((CSS_WS_Account_Code__c = &apos;P88&apos;),(CSS_WS_CSM_Date__c - CSS_WS_TSM_Date__c),(CSS_WS_CSM_Date__c - CSS_WS_Factory_Review_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSM Date Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_CSM_Date__c</fullName>
        <label>CSM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Campaign_Labor_Percentage__c</fullName>
        <label>Campaign Labor Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Campaign_OC_Percentage__c</fullName>
        <label>Campaign OC Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Campaign_Parts_Percentage__c</fullName>
        <label>Campaign Parts Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Campaign_Towing_Percentage__c</fullName>
        <label>Campaign Towing Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Campaign_Travel_Percentage__c</fullName>
        <label>Campaign Travel Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Campaigns_TRPs__c</fullName>
        <label>Program (Warranty)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Campaing_Number__c</fullName>
        <label>Campaing Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Catastrophic__c</fullName>
        <label>Catastrophic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Certificate_Number_Id__c</fullName>
        <label>Certificate Number Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Certificate_Number__c</fullName>
        <label>Certificate Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Channel_Code__c</fullName>
        <label>Channel Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Amount__c</fullName>
        <description>Total Claim Amount</description>
        <formula>CSS_WS_Total_Amount_Other_Claimables__c + CSS_WS_Total_Amount_Part__c + CSS_WS_Total_Amount_SRT__c + CSS_WS_Total_Amount_Travel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Claim Amount (Total amounts of SRTs, Parts, Travels and OC)</inlineHelpText>
        <label>Claim Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Auditable__c</fullName>
        <label>Claim Auditable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Creation_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Claim Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Narrative__c</fullName>
        <label>Claim Narrative</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Number__c</fullName>
        <displayFormat>MX{00000}{YY}</displayFormat>
        <label>Claim Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Reliability_Date__c</fullName>
        <label>Claim Reliability Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Reliability_Description__c</fullName>
        <label>Claim Reliability Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Reliability_Error_Message__c</fullName>
        <label>Claim Reliability Error Message</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Reliability_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claim Reliability Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Status__c</fullName>
        <defaultValue>&quot;Draft&quot;</defaultValue>
        <description>Status of the claim</description>
        <label>Claim Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Claim_Type__c</fullName>
        <label>Claim Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nuevo</fullName>
                </value>
                <value>
                    <fullName>Recon</fullName>
                </value>
                <value>
                    <fullName>Herramienta de Servicio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Complaints1_Desc__c</fullName>
        <label>Main Complaint</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Complaints1__c</fullName>
        <label>Main Complaint</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Complaints2_Desc__c</fullName>
        <label>Complaints</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Complaints2__c</fullName>
        <label>Complaints</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Complaints3_Desc__c</fullName>
        <label>Complaints</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Complaints3__c</fullName>
        <label>Complaints</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Component_Code__c</fullName>
        <label>Component Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Contact_Name_del__c</fullName>
        <defaultValue>$User.FirstName</defaultValue>
        <label>Contact Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Contact_Phone_Number__c</fullName>
        <defaultValue>$User.Phone</defaultValue>
        <label>Contact Phone Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Covered_Labor_Hours__c</fullName>
        <label>Covered Labor Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Covered_Meals_Lodging__c</fullName>
        <label>Covered Meals &amp; Lodging</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Covered_OC_Amount__c</fullName>
        <label>Covered OC Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Covered_Parts_Qty__c</fullName>
        <label>Covered Parts Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Covered_Towing_Miles__c</fullName>
        <label>Covered Towing Miles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Covered_Travel_Labor__c</fullName>
        <label>Covered Travel Labor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Covered_Travel_Miles__c</fullName>
        <label>Covered Travel Miles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Credit_Date__c</fullName>
        <description>Amount Webservice</description>
        <label>Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Cummins_Cycle_Time__c</fullName>
        <formula>IF( ISPICKVAL(CSS_WS_Policy_Flag__c, &quot;Warranty&quot;), CSS_WS_DR_Date_Days__c + CSS_WS_US_Date_Days__c + CSS_WS_Factory_Payment_Date_Days__c + CSS_WS_DR_Payment_Date_Days__c, IF( ISPICKVAL(CSS_WS_Policy_Flag__c, &quot;Policy&quot;) &amp;&amp; (CSS_WS_Account_Code__c = &apos;P88&apos; || CSS_WS_Account_Code__c = &apos;P100&apos;), CSS_WS_DR_Date_Days__c + CSS_WS_TSM_Date_Days__c + CSS_WS_CSM_Date_Days__c + CSS_WS_Factory_Payment_Date_Days__c + CSS_WS_DR_Payment_Date_Days__c, IF( ISPICKVAL(CSS_WS_Policy_Flag__c, &quot;Policy&quot;) &amp;&amp; CSS_WS_Account_Code__c &lt;&gt; &apos;P88&apos; &amp;&amp; CSS_WS_Account_Code__c &lt;&gt; &apos;P100&apos;, CSS_WS_DR_Date_Days__c + CSS_WS_Factory_Review_Date_Days__c + CSS_WS_CSM_Date_Days__c + CSS_WS_Factory_Payment_Date_Days__c + CSS_WS_DR_Payment_Date_Days__c, 0) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cummins Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Customer_Name_Internal__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSS_WS_Claim</relationshipLabel>
        <relationshipName>CSS_WS_Claims_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Customer_Support_Engineer__c</fullName>
        <label>Customer Support Engineer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Customer_Support_authorization_da__c</fullName>
        <label>Customer Support authorization date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DLR_Credit_Number__c</fullName>
        <label>DLR Credit Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DLR_Payment_Date__c</fullName>
        <label>DLR Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DR_Credit_Number__c</fullName>
        <label>DR Credit Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DR_Date_Days__c</fullName>
        <formula>CSS_WS_DR_Date__c - CSS_WS_Dealer_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DR Date Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DR_Date__c</fullName>
        <label>DR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DR_Payment_Date_Days__c</fullName>
        <formula>CSS_WS_DLR_Payment_Date__c - CSS_WS_Factory_Payment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DR Payment Date Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DR_Payment_Date__c</fullName>
        <label>DR Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DR_Rejection_Reason__c</fullName>
        <label>DR Rejection Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DSID__c</fullName>
        <label>DSID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Dealer_Date_Days__c</fullName>
        <formula>CSS_WS_Dealer_Date__c - DATEVALUE(CSS_WS_Failure_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Date Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Dealer_Date__c</fullName>
        <label>Dealer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Deductible_Amount__c</fullName>
        <label>Deductible Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ECM_Calib_Justification__c</fullName>
        <description>ECM Calibration Justification</description>
        <label>Justification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TSB Requirement</fullName>
                </value>
                <value>
                    <fullName>Field Action</fullName>
                </value>
                <value>
                    <fullName>Symptom Correction</fullName>
                </value>
                <value>
                    <fullName>Tier 2 Direction</fullName>
                </value>
                <value>
                    <fullName>CFSE Direction</fullName>
                </value>
                <value>
                    <fullName>Latched Fault Code</fullName>
                </value>
                <value>
                    <fullName>ECM Replacement</fullName>
                </value>
                <value>
                    <fullName>Broken Revision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_ECM_Calibration_After__c</fullName>
        <label>ECM Calibration after</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ECM_Calibration_Before__c</fullName>
        <label>ECM Calibration before</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ESN_Count__c</fullName>
        <label>ESN Count</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_End_Repair_Date_Time__c</fullName>
        <label>End of repair date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_App_Description_Name__c</fullName>
        <label>Engine Application Description/Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Application_Code__c</fullName>
        <label>Engine Application Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Application__c</fullName>
        <label>Engine Application</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Bill_to_Code__c</fullName>
        <label>Engine Bill to Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Family_Code__c</fullName>
        <label>Engine Family Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Serial_Number__c</fullName>
        <label>Engine Serial No.</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Engine_Trade_Out_conversion_date__c</fullName>
        <label>Engine Trade Out conversion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Equipment_Code__c</fullName>
        <label>Equipment Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Error_US_Reason__c</fullName>
        <label>Error in US Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Factory_Cycle_Days__c</fullName>
        <formula>IF( ISPICKVAL(CSS_WS_Policy_Flag__c, &quot;Warranty&quot;), CSS_WS_US_Date_Days__c + CSS_WS_Factory_Payment_Date_Days__c, IF( ISPICKVAL(CSS_WS_Policy_Flag__c, &quot;Policy&quot;) &amp;&amp; (CSS_WS_Account_Code__c = &apos;P88&apos; || CSS_WS_Account_Code__c = &apos;P100&apos;), CSS_WS_TSM_Date_Days__c + CSS_WS_CSM_Date_Days__c + CSS_WS_Factory_Payment_Date_Days__c, IF( ISPICKVAL(CSS_WS_Policy_Flag__c, &quot;Policy&quot;) &amp;&amp; CSS_WS_Account_Code__c &lt;&gt; &apos;P88&apos; &amp;&amp; CSS_WS_Account_Code__c &lt;&gt; &apos;P100&apos;, CSS_WS_Factory_Review_Date_Days__c + CSS_WS_CSM_Date_Days__c + CSS_WS_Factory_Payment_Date_Days__c, 0) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factory Cycle Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Factory_Payment_Date_Days__c</fullName>
        <formula>if(ISPICKVAL(CSS_WS_Policy_Flag__c,&apos;Warranty&apos;),(CSS_WS_Factory_Payment_Date__c - CSS_WS_US_Date__c),(CSS_WS_Factory_Payment_Date__c - CSS_WS_CSM_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factory Payment Date Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Factory_Payment_Date__c</fullName>
        <label>Factory Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Factory_Review_Date_Days__c</fullName>
        <formula>CSS_WS_Factory_Review_Date__c  -  CSS_WS_DR_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factory Review Date Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Factory_Review_Date__c</fullName>
        <label>Factory Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Failure_Date_Time__c</fullName>
        <label>Failure Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Failure_Measure__c</fullName>
        <label>Failure Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>KM</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Hrs</fullName>
                    <isActive>false</isActive>
                    <label>Hrs</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Failure_Name__c</fullName>
        <label>Failure Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Failure_Point_Quantity__c</fullName>
        <label>Failure Point Qty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Fault_Code__c</fullName>
        <label>Fault Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Flow__c</fullName>
        <label>Flow</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_GSQ_Failure_Flag__c</fullName>
        <label>GSQ Failure Flag</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_GSQ_Number__c</fullName>
        <label>GSQ Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_GSQ_SRT_Flag__c</fullName>
        <label>GSQ SRT Flag</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_HasError__c</fullName>
        <defaultValue>0</defaultValue>
        <label>HasError</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_HasMessage__c</fullName>
        <label>HasMessage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_IMS_Claim_Number__c</fullName>
        <label>IMS Claim Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_InShopCampaignFlag__c</fullName>
        <label>In Shop Campaign Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_In_shop_Labor_Rate__c</fullName>
        <label>In shop Labor Rate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Labor_Rate__c</fullName>
        <label>Labor Rate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Labor_rate_penalty__c</fullName>
        <label>Labor rate penalty</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Lodging__c</fullName>
        <label>Travel Meals and Lodging</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Log_Information__c</fullName>
        <label>Log Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Policy</fullName>
                    <default>true</default>
                    <label>Policy</label>
                </value>
                <value>
                    <fullName>Warranties</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Login_Variable__c</fullName>
        <label>Login Variable</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Manual_Adjudication_Flag__c</fullName>
        <description>Manual Adjudication Flag</description>
        <label>Manual Adjudication Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Marine_Application_Flag__c</fullName>
        <label>Marine Application Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Mission_Disabling_Severity_Code__c</fullName>
        <label>Mission Disabling (Severity Code)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Model_Series__c</fullName>
        <label>Model Series</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Multi_ESN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi ESN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ODM_Call_Presubmit_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ODM Validation Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ODM_SRT_Success_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ODM SRT Success Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Other_Approver__c</fullName>
        <label>Other Approver</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Other_Claimables__c</fullName>
        <label>Other Claimables</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Antifreeze/Coolant</fullName>
                </value>
                <value>
                    <fullName>Coolant Filter</fullName>
                </value>
                <value>
                    <fullName>DCA</fullName>
                </value>
                <value>
                    <fullName>Fuel Filter</fullName>
                </value>
                <value>
                    <fullName>Oil</fullName>
                </value>
                <value>
                    <fullName>Oil Filter</fullName>
                </value>
                <value>
                    <fullName>Ties</fullName>
                </value>
                <value>
                    <fullName>WaterFilter</fullName>
                </value>
                <value>
                    <fullName>Belt</fullName>
                </value>
                <value>
                    <fullName>Crankcase Breather Element</fullName>
                </value>
                <value>
                    <fullName>Unlisted</fullName>
                </value>
                <value>
                    <fullName>Towing</fullName>
                </value>
                <value>
                    <fullName>ETO Expense</fullName>
                </value>
                <value>
                    <fullName>Replacement Engine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Part_Return_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part Return Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Parts_Mark_Up__c</fullName>
        <label>Parts Mark Up</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Pay_Code_Amount__c</fullName>
        <label>Pay Code US</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Pay_Code__c</fullName>
        <label>Pay Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Penalty_Flag__c</fullName>
        <label>Penalty Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Penalty__c</fullName>
        <label>Penalty</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Percentaje_Customer__c</fullName>
        <label>% Customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Percentaje_Factory__c</fullName>
        <label>% Factory</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Percentaje_Requested__c</fullName>
        <label>% Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Policy_Campaign__c</fullName>
        <label>Program (Policy)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
</CustomObject>